--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container-xl ">
                <div class="row header__wrapper-menu ">
                   <div class=" col-md-2 col-5 header__logo">
-                     <a href="/" class="header__logo-link">LOGO</a>
+                     <a href="#header" class="header__logo-link">LOGO</a>
                   </div>
 
                   <nav class="col-md-7 header__nav-menu">
